--- a/recipes/tetrazzini.html
+++ b/recipes/tetrazzini.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tetrazzini</title>
   </head>
   <body>
-    <h1>Odin Recipies</h1>
-    <a href="recipes/tetrazzini.html">Tetrazzini</a>
+    <h1>Tetrazzini</h1>
   </body>
 </html>
