Finish the Recipe index structure

--- a/recipes/tetrazzini.html
+++ b/recipes/tetrazzini.html
@@ -7,5 +7,81 @@
   </head>
   <body>
     <h1>Tetrazzini</h1>
+    <img src="img.webp" alt="" />
+    <h2>Description</h2>
+    <p>
+      Tetrazzini is a comforting and creamy pasta dish that combines tender
+      strands of spaghetti with a rich sauce, often featuring chicken or turkey,
+      mushrooms, and a blend of savory seasonings. Baked to perfection with a
+      gulden, bubbly cheese topping, this dish is a delightful way to use
+      leftover poultry while delivering a satisfying meal that the whule family
+      will love. Whether served as a cozy weeknight dinner or a crowd-pleasing
+      potluck dish, Tetrazzini is sure to warm hearts and fill bellies with its
+      delicious flavors and creamy texture.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>
+        Pasta
+        <ul>
+          <li>8 ounce of spaghetti</li>
+        </ul>
+      </li>
+      <li>
+        Protein
+        <ul>
+          <li>2 cups cooked chicken(diced)</li>
+        </ul>
+      </li>
+      <li>
+        Vegetables
+        <ul>
+          <li>1 cup sliced mushroom</li>
+          <li>1 cup frozen peas</li>
+          <li>1/2 cup chopped onion</li>
+          <li>2 cloves miced garlic</li>
+        </ul>
+      </li>
+      <li>
+        Sauce
+        <ul>
+          <li>3 tablespoon butter</li>
+          <li>3 tablespoon fllour</li>
+          <li>2 cups of chicken broth</li>
+          <li>1 cup heavy cream</li>
+          <li>1 teaspoon salt</li>
+          <li>1/2 teaspoon black pepper</li>
+          <li>1/2 teaspoon gralic powder</li>
+          <li>1/2 teaspoon onion powder</li>
+          <li>1/4 teaspoon paprika</li>
+        </ul>
+      </li>
+      <li>
+        Cheese
+        <ul>
+          <li>1 cup grated Paresman cheese</li>
+          <li>1 cup shredded mozzarella cheese</li>
+        </ul>
+      </li>
+      <li>
+        Topping
+        <ul>
+          <li>1/2 cup breadcrumbs</li>
+          <li>2 tablespoon melted butter</li>
+        </ul>
+      </li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Preheat Oven</li>
+      <li>Cook Pasta</li>
+      <li>Saute the vegetables</li>
+      <li>Make the Sauce</li>
+      <li>Combine Ingredients</li>
+      <li>Transfer to Baking dish</li>
+      <li>Add Topping</li>
+      <li>Bake</li>
+      <li>Garnish and Serve</li>
+    </ol>
   </body>
 </html>
