Add other recipe pages too

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Odin Recipies</h1>
     <a href="recipes/tetrazzini.html">Tetrazzini</a>
+    <a href="recipes/Beef_Stroganoff.html">Beef Stroganoff</a>
+    <a href="recipes/Vegetable_Lasagna.html">Vegetable Lasagna</a>
   </body>
 </html>
