--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Odin Recipies</h1>
-    <a href="recipes/tetrazzini.html">Tetrazzini</a>
+    <ul>
+      <li><a href="recipes/tetrazzini.html">Tetrazzini</a></li>
+      <li><a href="recipes/Beef_Stroganoff.html">Beef Stroganoff</a></li>
+      <li><a href="recipes/Vegetable_Lasagna.html">Vegetable Lasagna</a></li>
+    </ul>
   </body>
 </html>
