Solve image issues with the recipe

--- a/recipes/tetrazzini.html
+++ b/recipes/tetrazzini.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <h1>Tetrazzini</h1>
-    <img src="img.webp" alt="" />
+    <img
+      src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.eKfUB_swmLKekGsu4PUGbAHaHa%26pid%3DApi%26h%3D160&f=1&ipt=6d335007636aba718b74050befc9304dfafe76aba81706fd7f689c8cf2a321dd&ipo=images"
+      alt=""
+    />
     <h2>Description</h2>
     <p>
       Tetrazzini is a comforting and creamy pasta dish that combines tender
