--- a/recipes/Beef_Stroganoff.html
+++ b/recipes/Beef_Stroganoff.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <h1>Beef Stroganoff</h1>
-    <img src="Beef.jpg" alt="Beef Stroganoff" />
+    <img
+      src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg.spoonacular.com%2Frecipes%2F709896-312x231.jpg&f=1&ipo=recipes"
+      alt="Beef Stroganoff"
+    />
     <h2>Description</h2>
     <p>
       Beef Stroganoff is a classic Russian dish that features tender strips of
