--- a/recipes/Vegetable_Lasagna.html
+++ b/recipes/Vegetable_Lasagna.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <h1>Vegetable Lasagna</h1>
-    <img src="vegetable_lasagna.jpg" alt="Vegetable Lasagna" />
+    <img
+      src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg.spoonacular.com%2Frecipes%2F1927898-312x231.jpg&f=1&ipo=recipesble_lasagna.jpg"
+      alt="Vegetable Lasagna"
+    />
     <h2>Description</h2>
     <p>
       Vegetable Lasagna is a delicious and hearty dish that layers sheets of
